--- a/Application/Student/View/Paper/submitctrl.html
+++ b/Application/Student/View/Paper/submitctrl.html
@@ -3,7 +3,71 @@
     <div class="wrap">
         <section id="contents">
             <div class="tab-content">
+                <a class="btn btn-primary" href="{:U('Paper/newSubmit')}">点击投稿</a>
+            <div class="submit-record">
+                <div class="submit-item">
+                    <div class="title">
+                        <h3>第2次投稿</h3>
+                    </div>
+                    <div class="submit-item-wrap">
+                        <div class="info">
+                            <div class="info-head">
+                                <span>3</span>
+                            </div>
+                            <p style="float: left;line-height: 40px;padding-left: 20px"><span style="font-size: 16px;font-weight: bold;display: inline-block;padding-right: 30px">初投</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                        <div class="info-line">
 
+                        </div>
+                        <div class="info">
+                            <div class="info-head">
+                                <span>2</span>
+                            </div>
+                            <p style="float: left;line-height: 40px;padding-left: 20px"><span style="font-size: 16px;font-weight: bold;display: inline-block;padding-right: 30px">初投</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                        <div class="info-line">
+
+                        </div>
+                        <div class="info">
+                            <div class="info-head">
+                                <span>1</span>
+                            </div>
+                            <p style="float: left;line-height: 40px;padding-left: 20px"><span style="font-size: 16px;font-weight: bold;display: inline-block;padding-right: 30px">初投</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="submit-item">
+                    <div class="title">
+                        <h3>第1次投稿</h3>
+                    </div>
+                    <div class="submit-item-wrap">
+                        <div class="info">
+                            <div class="info-head">
+                                <span>3</span>
+                            </div>
+                            <p style="float: left;line-height: 40px;padding-left: 20px"><span style="font-size: 16px;font-weight: bold;display: inline-block;padding-right: 30px">录用</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                        <div class="info-line">
+
+                        </div>
+                        <div class="info">
+                            <div class="info-head">
+                                <span>2</span>
+                            </div>
+                            <p class="info-p"><span>在审</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                        <div class="info-line">
+
+                        </div>
+                        <div class="info">
+                            <div class="info-head">
+                                <span>1</span>
+                            </div>
+                            <p style="float: left;line-height: 40px;padding-left: 20px"><span style="font-size: 16px;font-weight: bold;display: inline-block;padding-right: 30px">初投</span><span class="time" style="font-size: 13px">2016-12-4 12:32</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         </div>
