--- a/Application/Student/View/Public/head.html
+++ b/Application/Student/View/Public/head.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="__STATIC__/jquery-2.0.3.min.js"></script>
 <!--<![endif]-->
 <script type="text/javascript" src="__STATIC__/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="__STATIC__/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
 <script type="text/javascript" src="__STATIC__/uploadify/jquery.uploadify.min.js"></script>
 <script type="text/javascript" src="__STATIC__/zclip/ZeroClipboard.min.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript" src="__COMMON__/js/dialog.js?v={:SITE_VERSION}"></script>
