--- a/Application/Student/View/Public/head.html
+++ b/Application/Student/View/Public/head.html
@@ -4,6 +4,7 @@
 <link rel="shortcut icon" href="{:SITE_URL}/favicon.ico">
 <title><php>echo empty($page_title) ? C('WEB_SITE_TITLE') : $page_title;</php></title>
 <link href="__PUBLIC__/static/font-awesome/css/font-awesome.min.css?v={:SITE_VERSION}" rel="stylesheet">
+<link href="__STATIC__/datepicker/css/datepicker.css" rel="stylesheet">
 <link href="__COMMON__/css/base.css?v={:SITE_VERSION}" rel="stylesheet">
 <link href="__COMMON__/css/module.css?v={:SITE_VERSION}" rel="stylesheet">
 <link href="__COMMON__/css/weiphp.css?v={:SITE_VERSION}" rel="stylesheet">
@@ -22,7 +23,8 @@
 <script type="text/javascript" src="__STATIC__/jquery-2.0.3.min.js"></script>
 <!--<![endif]-->
 <script type="text/javascript" src="__STATIC__/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="__STATIC__/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="__STATIC__/datepicker/js/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="__STATIC__/datepicker/locales/bootstrap-datepicker.zh-CN.js"></script>
 <script type="text/javascript" src="__STATIC__/uploadify/jquery.uploadify.min.js"></script>
 <script type="text/javascript" src="__STATIC__/zclip/ZeroClipboard.min.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript" src="__COMMON__/js/dialog.js?v={:SITE_VERSION}"></script>
