--- a/Application/Teacher/View/Public/header.html
+++ b/Application/Teacher/View/Public/header.html
@@ -30,6 +30,9 @@
                         <a href="{:U('Index/index')}">首页</a>
                     </li>
                     <li data-id="60" class="">
+                        <a href="{:U('StudentPaper/index')}">学生论文</a>
+                    </li>
+                    <li data-id="60" class="">
                         <a href="{:U('Student/index')}">学生管理</a>
                     </li>
                     <li data-id="61" class="">
