--- a/Application/Student/View/PaperSubmit/index.html
+++ b/Application/Student/View/PaperSubmit/index.html
@@ -2,46 +2,121 @@
 <block name="body">
     <div class="wrap">
         <section id="contents">
-            <neq name="ableToNewSubmitFlag" value="1">
+            <br>
+            <h3 style="padding: 0 20px">论文：{$paper['name']}</h3>
+            <eq name="ableToNewSubmitFlag" value="1">
                 <!-- ableToNewSubmitFlag==1时才能新增投稿 -->
-                <a class="btn btn-primary" href="{:U('PaperSubmit/newSubmit',array('paper_id'=>$paper['id']))}">点击投稿</a>
-            </neq>
+                <a class="btn btn-large" style="display: block;margin: 10px 300px" href="{:U('PaperSubmit/newSubmit',array('paper_id'=>$paper['id']))}">点击投稿</a>
+            </eq>
+            <if condition="$paper['is_active']==0 and $paper['paper_status']==C('PSSC')['ACCEPT']">
+                <div style="padding: 30px;border: 2px solid limegreen;margin: 10px 500px;border-radius: 5px">
+                    <h1 class="text-center" style="color: limegreen">已录用</h1>
+                </div>
+            </if>
 
+            <notempty name="activePaperSubmit">
+                <assign name="vo" value="$activePaperSubmit"/>
 
-            <!-- 所投期刊列表 -->
-            <volist name="paperSubmits" id="vo" status="status">
-                <p>期刊：<a href="#">{$vo.periodical_name}</a></p>
-                <p>投递日期：{$vo.submit_date}</p>
+                <h3 class="text-center">当前投稿记录</h3>
+                <div class="table-bar">
+                    <div class="fl">
+                        <p>期刊：<a href="#">{$vo['periodical_name']}</a></p>
+                    </div>
+                    <div class="fr">
+                        <div class="tools">
+                            <if condition="($vo['submit_status'] lt C('PSSC')['REJECT']) and ($vo['is_active']==1)">
+                                <a href="javascript:void(0)" class="btn" onclick="updateStatus({$vo['id']})">更新状态</a>
+                            </if>
+                            <if condition="($vo['submit_status'] egt C('PSSC')['REJECT']) and ($vo['is_active']==1)">
+                                <a href="{:U('PaperSubmit/closeSubmit',array('submit_id'=>$vo['id']))}" class="btn confirm ajax-get">关闭</a>
+                            </if>
+                        </div>
+                    </div>
+
+                    <!-- 多维过滤 -->
+                </div>
+
                 <div class="data-table">
                     <div id="tagSelector"></div>
                     <div class="table-striped">
+
                         <table cellspacing="1">
-                            <!-- 表头 -->
-                            <thead>
-                            <tr>
-                                <th width="40"></th>
-                                <th>状态</th>
-                                <th>备注</th>
-                                <th width="120">更新日期</th>
-                                <th width="100">
-                                    <a href="{:U('PaperSubmit/updateStatus',array('submit_id'=>$vo['id']))}">更新状态</a>
-                                </th>
-                            </tr>
-                            </thead>
+
 
 
                             <tbody>
                             <!-- 状态列表 -->
                             <volist name="vo.record_arr" id="vo2" status="status">
                                 <tr>
-                                    <td class="text-center">{$key+1}</td>
-                                    <td>{$vo2.status_name}</td>
+                                    <td class="text-center" width="200">
+
+                                        {$vo2.status_name}
+                                    </td>
+                                    <td class="text-center" width="100">{$vo2.update_date}</td>
                                     <td>{$vo2.remark}</td>
-                                    <td>{$vo2.update_date}</td>
-                                    <td>
+                                    <td class="text-center" width="80">
                                         <if condition="$vo2['is_active']==1 and $key==0">
                                             <!-- 第一个可以进行删除 -->
-                                            <a class="confirm" href="{:U('PaperSubmit/delTopStatus',array('submit_id'=>$vo['id']))}" target="_self">删除</a>
+                                            <a class="ajax-get" href="{:U('PaperSubmit/delTopStatus',array('submit_id'=>$vo['id']))}" target="_self">撤销</a>
+                                            <else/>
+                                            <span style="color: #AAAAAA">不能修改</span>
+                                        </if>
+                                    </td>
+                                </tr>
+                            </volist>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <br>
+            </notempty>
+
+
+            <notempty name="paperSubmits">
+                <h3 class="text-center">历史投稿记录</h3>
+            </notempty>
+
+            <!-- 所投期刊列表 -->
+            <volist name="paperSubmits" id="vo" status="status">
+                <div class="table-bar">
+                    <div class="fl">
+                        <p>期刊：<a href="#">{$vo.periodical_name}</a></p>
+                    </div>
+                    <div class="fr">
+                        <div class="tools">
+                            <if condition="($vo['submit_status'] lt C('PSSC')['REJECT']) and ($vo['is_active']==1)">
+                                <a href="javascript:void(0)" class="btn" onclick="updateStatus({$vo['id']})">更新状态</a>
+                            </if>
+                            <if condition="($vo['submit_status'] egt C('PSSC')['REJECT']) and ($vo['is_active']==1)">
+                                <a href="{:U('PaperSubmit/closeSubmit',array('submit_id'=>$vo['id']))}" class="btn confirm ajax-get">关闭</a>
+                            </if>
+                        </div>
+                    </div>
+
+                    <!-- 多维过滤 -->
+                </div>
+
+                <div class="data-table">
+                    <div id="tagSelector"></div>
+                    <div class="table-striped">
+
+                        <table cellspacing="1">
+
+
+
+                            <tbody>
+                            <!-- 状态列表 -->
+                            <volist name="vo.record_arr" id="vo2" status="status">
+                                <tr>
+                                    <td class="text-center" width="200">{$vo2.status_name}</td>
+                                    <td class="text-center" width="100">{$vo2.update_date}</td>
+                                    <td>{$vo2.remark}</td>
+                                    <td class="text-center" width="80">
+                                        <if condition="$vo2['is_active']==1 and $key==0">
+                                            <!-- 第一个可以进行删除 -->
+                                            <a class="ajax-get" href="{:U('PaperSubmit/delTopStatus',array('submit_id'=>$vo['id']))}" target="_self">撤销</a>
+                                            <else/>
+                                            <span style="color: #AAAAAA">不能修改</span>
                                         </if>
                                     </td>
                                 </tr>
@@ -61,7 +136,7 @@
 
 <block name="script">
     <script type="text/javascript">
-        var url = "/{$Think.MODULE_NAME}/{$Think.CONTROLLER_NAME}/";
+        var url = "/{$Think.MODULE_NAME}/Paper/";
         //导航高亮
         $(".nav li a").each(function(i){
            if($(this).attr('href').indexOf(url) >= 0){
@@ -69,11 +144,59 @@
            }
         });
         function updateStatus(paperSubmitId){
-            var dataUrl = "{:U('PaperSubmit/selectStatus',array('submit_id'=>'_submit_id_'))}";
+            var dataUrl = "{:U('PaperSubmit/updateStatus',array('submit_id'=>'_submit_id_'))}";
+            var postUrl = "{:U('PaperSubmit/updateStatus')}";
             dataUrl = dataUrl.replace("_submit_id_",paperSubmitId);
             console.log(dataUrl);
             var $contentHtml = $('<div><div class="goods_dialog" style="padding:10px; height:530px;overflow-y:hidden;overflow-x:hidden;"><div class="mt_10"><iframe id="usersIframe" name="usersIframe" style="height:530px;width:100%; border:none" border="0" src="'+dataUrl+'"></iframe></div></div><div class="btn_bar"><a href="javascript:;" class="btn confirm_btn">确定</a>&nbsp;&nbsp;<a href="javascript:;" class="border-btn cancel_btn">取消</a></div></div>');
-            $.Dialog.open("更新状态",{width:1000,height:640},$contentHtml);
+            $.Dialog.open("更新投稿状态",{width:1000,height:640},$contentHtml);
+            $('.cancel_btn',$contentHtml).click(function(){
+                $.Dialog.close();
+            })
+            $('.confirm_btn',$contentHtml).click(function(){
+                var updateBool = window.confirm("状态确定要更新吗？更新后上一状态将不能撤销");
+                if(!updateBool){
+                    return;
+                }
+                var $form = $(window.frames["usersIframe"].document,$contentHtml).find("form");
+                var postData = {
+                    'status_code':$form.find("select[name='status_code']").val(),
+                    'submit_date':$form.find("input[name='submit_date']").val(),
+                    'submit_id':$form.find("input[name='submit_id']").val(),
+                    'remark':$form.find('textarea').val()
+                }
+                console.log(postData);
+                $.post(postUrl,postData,function(data){
+                    console.log(data)
+                    if(data.status==1){
+                        //投递成功
+                        if (data.url) {
+                            updateAlert(data.info + ' 页面即将自动跳转~','alert-success');
+                        }else{
+                            updateAlert(data.info,'alert-success');
+                        }
+                        setTimeout(function(){
+                            if (data.url) {
+                                location.href=data.url;
+                            }else if( $(that).hasClass('no-refresh')){
+                                $('#top-alert').find('button').click();
+                            }else{
+                                location.reload();
+                            }
+                        },1500);
+                    }else{
+                        console.log(data.info)
+                        updateAlert(data.info);
+                        setTimeout(function(){
+                            if (data.url) {
+                                location.href=data.url;
+                            }else{
+                                $('#top-alert').find('button').click();
+                            }
+                        },1500);
+                    }
+                })
+            })
         }
     </script>
 </block>
