--- a/Application/Student/View/PaperSubmit/newsubmit.html
+++ b/Application/Student/View/PaperSubmit/newsubmit.html
@@ -21,7 +21,7 @@
                                     投稿
                                 </notempty>
                             </h3>
-
+                            <p>论文：{$paper.name}</p>
                             <div class="form-item cf">
                                 <label class="item-label"> <span class="need_flag">*</span> 选择期刊 <span class="check-tips"> </span></label>
                                 <div class="controls">
